--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 body {
-  background: red;
+  background: green;
 }
 h1 {
-  color: white;
+  color: blue;
   text-transform: uppercase;
   text-align: center;
 }
